# =============================================================================
# keiba-yosou Project Configuration
# =============================================================================

[project]
name = "keiba-yosou"
version = "1.0.0"
description = "Horse racing prediction system using JRA-VAN official data with ML ensemble"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "raveuptonight"}
]
keywords = ["horse-racing", "prediction", "machine-learning", "xgboost", "lightgbm", "catboost"]

[project.urls]
Repository = "https://github.com/raveuptonight/keiba-yosou"

# =============================================================================
# pytest Configuration
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# mypy Configuration
# =============================================================================

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
explicit_package_bases = true
mypy_path = "."
# Disable strict checks for gradual adoption
disable_error_code = [
    "no-redef",
    "assignment",
    "arg-type",
    "return-value",
    "union-attr",
    "call-overload",
    "misc",
    "import-untyped",
    "var-annotated",
    "attr-defined",
    "call-arg",
    "operator",
    "list-item",
    "index",
    "type-arg",
    "name-defined",
]
exclude = [
    "tests/",
    "venv/",
    "build/",
    "dist/",
]

# =============================================================================
# ruff Configuration
# =============================================================================

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E402",  # module level import not at top of file (needed for FastAPI app structure)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # `zip()` without an explicit `strict=` parameter
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# =============================================================================
# black Configuration
# =============================================================================

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | build
  | dist
  | \.egg-info
)/
'''

# =============================================================================
# coverage Configuration
# =============================================================================

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
